# JAX-RL

./: .gitignore  README.md  run.sh
.github/workflows/: python-package-dqn.yml
DQN/: .gitignore  main.py  pyproject.toml  run.sh  train.py  train_vec.py
DQN/src/dqn/networks/: buffer.py  mlp.py  networks.py
DQN/src/dqn/train/: train.py
DQN/src/utils/: __init__.py  utils.py
DQN/tests/: test_buffer.py  test_mlp.py  test_networks.py  test_train.py
PPO/: pyproject.toml
PPO/src/ppo/networks/: mlp.py
PPO/src/ppo/train/: gae.py
PPO/tests/: test_mlp.py
