[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqn"
version = "0.1.0"
description = "DQN project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "gymnasium",
  "jax",
  "flax",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"