[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqn"
version = "0.1.0"
description = "DQN project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "gymnasium",
  "jax[cuda]==0.6.2",
  "flax==0.10.6",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"