[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppo"
version = "0.1.0"
description = "PPO package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "gymnasium",
  "jax==0.6.2",
  "flax==0.10.6",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"